--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
     </style>
+    <title>РумТибет</title>
+    
   </head>
   <body>
     <div id="app"></div>
